package behavioral_pattern.Observer_pattern.CA4;

public interface TopicListener {

    void listen(TinTuc t);

}
