@startuml
class Topic
{
- List<TinTuc> list
+ void DangKy(TopicListener listeners)
+ void HuydangKy(TopicListener listeners)
+ void ThemMoi(TinTuc t);
+ void CapNhap(TinTuc t);
}
interface TopicListener
{
    + void listen(TinTuc t);
}

class ThanhVienA
class ThanhVienB{
 List<TinTuc> list
}

TopicListener <|.. ThanhVienA
TopicListener <|.. ThanhVienB
Topic o--> TopicListener : listeners
ThanhVienA --> Topic : topic
ThanhVienB --> Topic : topic

@enduml